ipc/ipdl/test/ipdl/ok/Nullable.ipdl
union Union {
    nullable Nullable;
    nullable Nullable[];
};

protocol Nullable {
child:
    async Msg(nullable Nullable n);
    async Msg2(nullable Nullable[] N);
    async Msg3(Union u);
};
